# scanLLM

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT_FIX_GUIDE.md  GITHUB_README.md  LICENSE  README.md  ROADMAP.md  docker-compose.yml  insights-report.html  pyproject.toml  render.yaml
.deployment/: PRODUCTION_RELEASE_REPORT.md  deployment.config.json  pre-deploy-checklist.md
.emergent/: emergent.yml
.github-oauth/: IMPLEMENTATION_TODO.md
.github/workflows/: publish.yml
backend/: .dockerignore  Dockerfile  app.db  backend_test.py  requirements.txt  requirements_local.txt  server.py
backend/api/: auth_github.py  github_endpoints.py  scan_github.py
backend/app/: config.py  main.py
backend/core/: config.py  constants.py  database.py
backend/models/: __init__.py  demo_scan_cache.py  finding.py  github_token.py  github_user.py  oauth_state.py  organization.py  scan.py
backend/services/: blast_radius.py  contract_extractor.py  git_utils.py  github_api.py  github_scanner.py  heatmap.py  insights.py  llm_explainer.py  ownership_mapper.py  policy_engine.py  scanner.py  scanner_v2.py  session_manager.py  token_encryption.py
backend/tests/: conftest.py  test_existing_scanner.py  test_graph_builder.py  test_owasp_mapper.py  test_risk_engine.py
cli/: __init__.py  config.py  main.py  scanllm_cli.py  telemetry.py
cli/commands/: __init__.py  auth.py  diff.py  doctor.py  export.py  fix.py  init_cmd.py  policy.py  push.py  report.py  scan.py  score.py  telemetry_cmd.py  ui.py  watch.py
cli/output/: __init__.py  json_out.py  sarif.py  table.py
config/: ai_signatures.yaml  patterns.yml  policies.yml  settings.yml
core/: __init__.py
demo/: README.md
frontend/: .dockerignore  .env  Dockerfile  Dockerfile.dev  package-lock.json  package.json
scripts/: deploy_production.sh  deployment_verification.sh  prewarm_demo_scans.py  test_production.py  verify_env_config.py
test_reports/: iteration_1.json  iteration_2.json  iteration_3.json
(+157 files in other folders)
